# ComfyUI_StepAudioTTS

./: MWAudioRecorder.py  README-CN.md  README-en.md  README.md  StepAudioTTS.py  __init__.py  pyproject.toml  requirements.txt  tokenizer.py
Step-Audio-speakers/: speakers_info.json
funasr_detach/: register.py
funasr_detach/auto/: auto_model.py
funasr_detach/models/mossformer/: mossformer_encoder.py
